# test-app-xpub

./: .env  .gitignore  Cargo.toml  FEATURES.md  README.md  package-lock.json  package.json  vite.config.js
client/: onboard.js  proposal-sign.js
examples/: rescan_federation.rs
migrations/: 0001_init.sql  0002_bdk_wallet.sql  0003_proposals.sql  0004_federation_versions.sql  0005_migrations.sql  0006_proposal_kind.sql
plans/: jade-integration.md
scripts/: check-vendor.sh
src/: auth.rs  config.rs  db.rs  error.rs  federation_build.rs  jade.rs  lib.rs  lineage.rs  main.rs  migration.rs  models.rs  roster.rs  wallet.rs
src/handlers/: addresses.rs  auth.rs  federations.rs  home.rs  migrations.rs  mod.rs  new_federation.rs  onboard.rs  proposals.rs
static/: onboard.js  proposal-sign.js  styles.css
templates/: _federation_layout.html  address.html  base.html  federation_manage.html  federation_new.html  federation_receive.html  federation_send.html  home.html  lineage.html  login.html  migration_new.html  onboard.html  proposal.html
